packages/typ/tests/fixtures/diagnostics/0329_fun_locally_abstract_mismatch_09.ml.infer.expected
File "0329_fun_locally_abstract_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0329_fun_locally_abstract_mismatch_09 is not a valid module name.

File "0329_fun_locally_abstract_mismatch_09.ml", line 1, characters 38-39:
1 | let bad_iota (type a) (x : a) : int = x
                                          ^
Error: The value x has type a but an expression was expected of type int
